--- a/book.html
+++ b/book.html
@@ -5,6 +5,7 @@
 <body class="background-book">
   <script src="./index.js"></script>
   hola que tal, todo bien
+  Estoy haciendo una preba para ver si se actualiza correctamente
   <a href="index.html">HOME</a>
 </body>
 </html>
