--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
 <body class="background-home">
   <script src="./index.js"></script>
   hola que tal, todo bien
+  Estoy haciendo una preba para ver si se actualiza correctamente
   <a href="book.html">book</a>
 </body>
 </html>
